<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.uic.skatha2.clientapplication.ServiceResultActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/result"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"></ListView>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:divider="?android:dividerHorizontal"
        android:showDividers="beginning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/id"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="No."
            android:textColor="#000"
            tools:layout_editor_absoluteX="107dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/year"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textAlignment="center"
            android:text="@string/year_label"
            android:textColor="#000"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/month"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="center"
            android:text="@string/month_label"
            android:textColor="#000"
            tools:layout_editor_absoluteX="107dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/day"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="center"
            android:text="@string/date_label"
            android:textColor="#000"
            tools:layout_editor_absoluteX="107dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/day_of_week"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textAlignment="center"
            android:text="@string/day_of_week_label"
            android:textColor="#000"
            tools:layout_editor_absoluteX="107dp"
            tools:layout_editor_absoluteY="16dp" />


        <TextView
            android:id="@+id/cash"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textAlignment="center"
            android:text="@string/cash_label"
            android:textColor="#000"
            tools:layout_editor_absoluteX="107dp"
            tools:layout_editor_absoluteY="16dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
