<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="edu.uic.skatha2.clientapplication.ClientActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/welcome"
        android:textAppearance="@android:style/TextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <Button
        android:id="@+id/query_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/query"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/range_input"
        app:layout_constraintVertical_bias="0.199" />

    <TextView
        android:id="@+id/year_label"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:text="@string/year_label"
        android:labelFor="@+id/year_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_button" />

    <Spinner
        android:id="@+id/year_input"
        android:layout_width="100dp"
        android:layout_height="29dp"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.288"
        app:layout_constraintStart_toEndOf="@+id/year_label"
        app:layout_constraintTop_toTopOf="@+id/year_label" />

    <TextView
        android:id="@+id/month_label"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:text="@string/month_label"
        android:labelFor="@+id/month_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year_label" />

    <EditText
        android:id="@+id/month_input"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="8dp"
        android:inputType="number"
        android:text="1"
        app:layout_constraintBottom_toBottomOf="@+id/month_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/month_label"
        app:layout_constraintTop_toTopOf="@+id/month_label" />

    <TextView
        android:id="@+id/day_label"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:text="@string/date_label"
        android:labelFor="@+id/day_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/month_label" />

    <EditText
        android:id="@+id/day_input"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="8dp"
        android:inputType="number"
        android:text="1"
        app:layout_constraintBottom_toBottomOf="@+id/day_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toEndOf="@+id/day_label"
        app:layout_constraintTop_toTopOf="@+id/day_label" />

    <TextView
        android:id="@+id/range_label"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:text="@string/range_label"
        android:labelFor="@+id/range_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day_label" />

    <EditText
        android:id="@+id/range_input"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="8dp"
        android:inputType="number"
        android:text="30"
        app:layout_constraintBottom_toBottomOf="@+id/range_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/range_label"
        app:layout_constraintTop_toTopOf="@+id/range_label" />

</android.support.constraint.ConstraintLayout>
</ScrollView>